--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ input:focus:invalid {
 /* This is the style of our error messages */
 .error {
   width: 200px;
-  padding: 0;
+  padding: 0 5px;
 
   font-size: 80%;
   color: white;
